--- a/DavidMVC/Views/Home/Index.cshtml
+++ b/DavidMVC/Views/Home/Index.cshtml
@@ -21,3 +21,7 @@
         }
     </strong>
 </p>
+@*<script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>
+<wb:follow-button uid="1811620831" type="red_3" width="100%" height="24" ></wb:follow-button>*@
+@*<script src=" http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=2429474219" type="text/javascript"
+    charset="utf-8"></script>*@
